# rust-project-template

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
crates/template/: Cargo.toml
crates/template/benches/: bench.rs
crates/template/src/: add.rs  lib.rs  main.rs
crates/template/src/add/: tests.rs
